<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.fragments.FilterFragment">

        <LinearLayout
            android:id="@+id/filter_menu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_title"
                android:gravity="center"
                android:padding="15dp"
                android:textSize="18sp"
                android:textColor="?android:attr/textColor"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_gray"
                android:layout_marginBottom="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginEnd="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/order_spinner_title"
                        android:textSize="18sp" />

                    <Spinner
                        android:id="@+id/spinnerOrder"
                        android:layout_width="171dp"
                        android:layout_height="49dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/type_spinner_title"
                        android:textSize="18sp" />

                    <Spinner
                        android:id="@+id/spinnerType"
                        android:layout_width="171dp"
                        android:layout_height="49dp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="20dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginEnd="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/category_spinner_title"
                        android:textSize="18sp" />

                    <Spinner
                        android:id="@+id/spinnerCategory"
                        android:layout_width="171dp"
                        android:layout_height="49dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/breed_spinner_title"
                        android:textSize="18sp" />

                    <Spinner
                        android:id="@+id/spinnerBreed"
                        android:layout_width="171dp"
                        android:layout_height="49dp" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/applyFilterBtn"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:text="@string/apply_filter_button"
                android:layout_gravity="center"
                android:backgroundTint="@color/design_default_color_primary"
                android:textColor="@color/white" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/filter_progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="130dp"/>

    </FrameLayout>
</layout>