<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".ui.fragments.CatAnalysisCardFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:background="@android:color/transparent"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="?attr/colorPrimary"
                android:fitsSystemWindows="true"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/catAnalysisCardImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    app:layout_collapseMode="parallax"
                    tools:src="@drawable/image_placeholder"
                    tools:ignore="ContentDescription" />

                <androidx.appcompat.widget.Toolbar
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:contentInsetStart="0dp"
                    app:layout_collapseMode="pin">

                    <ImageButton
                        android:id="@+id/catAnalysisCardBackBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:padding="15dp"
                        android:src="@drawable/ic_arrow_back"
                        tools:ignore="ContentDescription" />

                </androidx.appcompat.widget.Toolbar>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:id="@+id/cat_analysis_progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="com.example.catsapp.ui.fragments.AdaptiveHeightScrollingViewBehavior"
            tools:visibility="gone">

            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>

        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:id="@+id/catAnalysisCardInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                tools:visibility="visible">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:textColor="?android:attr/textColor"
                    android:textStyle="bold"
                    android:layout_marginBottom="15dp"
                    android:text="@string/image_analysis_title"/>

                <TextView
                    android:id="@+id/catAnalysisImageId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="?android:attr/textColor"
                    android:text="@string/image_analysis_id"/>

                <TextView
                    android:id="@+id/catAnalysisCreatedAt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="?android:attr/textColor"
                    android:text="@string/image_analysis_created_at"/>

                <TextView
                    android:id="@+id/catAnalysisVendor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="?android:attr/textColor"
                    android:layout_marginBottom="15dp"
                    android:text="@string/image_analysis_vendor"/>

                <LinearLayout
                    android:id="@+id/catAnalysisLabels"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone"
                    tools:visibility="visible">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/image_analysis_labels"
                        android:textStyle="bold"
                        android:layout_marginBottom="10dp"
                        android:textColor="?android:attr/textColor"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/catAnalysisListRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:overScrollMode="never"/>

                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>